--- a/VS uppgift/Data.css
+++ b/VS uppgift/Data.css
@@ -1,3 +1,4 @@
+/*Emilio DATA2*/
 img {
     height:auto ;
     width: 600px;
@@ -13,11 +14,14 @@ img {
   height: auto;
 }
 
+p {
+  width: 600px;
+}
 
 
 
 
-
+/*Emilio Data2*/
 body {
     background-color: rgb(255, 255, 255);
 }
